--- a/index.html
+++ b/index.html
@@ -5,29 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://unpkg.com/vue@3"></script>
+  <style>
+    html, body {
+      height: 100%;
+    }
+    body {
+      display: grid;
+      place-items:  center;;
+    }
+    .text-red {
+      color: red;
+    }
+    .text-green {
+      color: green;
+    }
+  </style>
 </head>
 <body>
   
   <div id="app">
-    <p>
-      <input type="text" v-model="greeting">
-    </p>
-    <p>
-      {{ greeting }} + {{greeting.length}}
-
-    </p>
+    <button :class="active ? 'text-red' : 'text-green'" @click="toggle">click me</button>
+    
   </div>
   <script>
     Vue.createApp({
       data() {
         return {
-          greeting: 'Hel, Vue!'
+          //buttonClasses: 'text-green',
+          active: false
         };
       },
-      mounted() {
-        setTimeout(() => {
-          this.greeting = 'New value';
-        }, 2000);
+      methods: {
+        toggle() {
+          this.active = !this.active;
+          //this.buttonClasses = this.active ? 'text-red' : 'text-green';
+        }
       }
     }).mount('#app');
   </script>
