--- a/index.html
+++ b/index.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://unpkg.com/vue@3"></script>
-  <style>
-    html, body {
-      height: 100%;
-    }
-    body {
-      display: grid;
-      place-items:  center;;
-    }
-    .text-red {
-      color: red;
-    }
-    .text-green {
-      color: green;
-    }
-  </style>
-</head>
-<body>
+  <script src="https://cdn.tailwindcss.com"></script></head>
+<body class="h-full grid place-items-center">
   
   <div id="app">
-    <button :class="active ? 'text-red' : 'text-green'" @click="toggle">click me</button>
-    
+    <section v-show="inProgressAssignments.length">
+      <h2 class="font-bold mb-2">In progress</h2>
+      <ul>
+        <li 
+          v-for="assignment in inProgressAssignments" 
+          :key="assignment.id"
+        >
+          <label>
+            {{assignment.name}}
+            <input type="checkbox" v-model="assignment.completed">
+          </label>
+        </li>
+      </ul>
+    </section> 
+    <section v-show="completedAssignments.length" class="mt-8">
+      <h2 class="font-bold mb-2">Completed</h2>
+      <ul>
+        <li 
+          v-for="assignment in completedAssignments" 
+          :key="assignment.id"
+        >
+          <label>
+            {{assignment.name}}
+            <input type="checkbox" v-model="assignment.completed">
+          </label>
+        </li>
+      </ul>
+    </section> 
   </div>
   <script>
-    Vue.createApp({
+    let app = {
       data() {
         return {
-          //buttonClasses: 'text-green',
-          active: false
+          assignments: [
+            { name: 'Assignment 1', completed: false, id: 1 },
+            { name: 'Assignment 2', completed: false, id: 2 },
+            { name: 'Assignment 3', completed: false, id: 3 }
+          ]
         };
       },
-      methods: {
-        toggle() {
-          this.active = !this.active;
-          //this.buttonClasses = this.active ? 'text-red' : 'text-green';
+      computed:{
+        completedAssignments(){
+          return this.assignments.filter(a => a.completed)
+        },
+        inProgressAssignments(){
+          return this.assignments.filter(a => !a.completed)
         }
       }
-    }).mount('#app');
+    }
+    Vue.createApp(app).mount('#app');
   </script>
 </body>
 </html>
