--- a/index.html
+++ b/index.html
@@ -6,19 +6,40 @@
   <title>Document</title>
   <script src="https://unpkg.com/vue@3"></script>
   <script src="https://cdn.tailwindcss.com"></script></head>
+  <style>
+    /* HTML: <div class="loader"></div> */
+.is-loading {
+  aspect-ratio: 1;
+  background:
+    linear-gradient( 45deg,#00AAFF 50%,#0000 0),
+    linear-gradient(-45deg,#F1BBBB 50%,#0000 0),
+    linear-gradient( 45deg,#0000 50%,#AA00FF 0),
+    linear-gradient(-45deg,#0000 50%,#FF00AA 0),
+    #00AAFF;
+  background-size: 200% 200%;
+  background-repeat: no-repeat;
+  animation: l3 2.5s infinite; 
+}
+@keyframes l3 {
+  0%   {background-position:100% 0,0    0   ,0 100%,100% 100%}
+  15%,
+  25%  {background-position:100% 0,0    0   ,0 100%,0    0   }
+  40%,
+  50%  {background-position:100% 0,0    0   ,100% 0,0    0   }
+  65%,
+  75%  {background-position:100% 0,100% 100%,100% 0,0    0   }
+  90%,
+  100% {background-position:0 100%,100% 100%,100% 0,0    0   }
+}
+  </style>
 <body class="h-full grid place-items-center">
   
   <div id="app">
-    <app-button>Click me</app-button>
-    <app-button>Click </app-button>
+    <app-button type="primary" :processing="true">Click me</app-button>
+    <app-button type="secondary">Click me</app-button>
   </div>
   <script type="module">
-    import AppButton from './js/components/AppButton.js';
-    let app = {
-      components: {
-        'app-button': AppButton,
-      }
-    }
+    import app from './js/components/App.js';
     Vue.createApp(app).mount('#app');
   </script>
 </body>
